--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
+    "lint": "standard",
+    "lint:fix": "standard --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,5 +14,8 @@
   "license": "ISC",
   "config": {
     "lastGeneratedTimestamp": 0
+  },
+  "devDependencies": {
+    "standard": "^17.1.0"
   }
 }
