chore: Add jest environment to standard config
The "standard" config in the package.json file has been updated to include "jest" in the environment. This change facilitates better integration and compatibility with Jest as a testing framework for the project.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   "config": {
     "lastGenerated": "2010-04-19T18:26:01.258Z"
   },
+  "standard": {
+    "env": [
+      "jest"
+    ]
+  },
   "devDependencies": {
     "jest": "^29.7.0",
     "standard": "^17.1.0"
