--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node src/index.js",
     "lint": "standard",
     "lint:fix": "standard --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "Oliver Grüttner",
