chore: Update author information and add repository in package.json
Updated the author's information to include an email and website in package.json. A reference to the project's GitHub repository has also been added.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest"
   },
   "keywords": [],
-  "author": "Oliver Grüttner",
+  "author": "Oliver Grüttner <dev@olivergruettner.de> (https://olis.tech)",
+  "repository": "github:Defkil/material-design-icons-literal-types",
   "license": "ISC",
   "config": {
     "lastGenerated": "2010-04-19T18:26:01.258Z"
