--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "material-design-icons-literal-types",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
     "lint": "standard",
@@ -16,6 +15,10 @@
   "config": {
     "lastGenerated": "2010-04-19T18:26:01.258Z"
   },
+  "files": [
+    "README.md",
+    "dist"
+  ],
   "standard": {
     "env": [
       "jest"
