ci: Remove pnpm install (no dependencies)
This commit removes the use of the pnpm package manager in the GitHub actions workflow. The code has been refactored to use npm instead, simplifying the process by reducing the steps involved and removing the need to install and manage an additional package manager.

--- a/.github/workflows/update-types.yml
+++ b/.github/workflows/update-types.yml
@@ -11,19 +11,10 @@ jobs:
         node-version: [ 20 ]
     steps:
       - uses: actions/checkout@v4
-      - name: Install pnpm
-        uses: pnpm/action-setup@v3
-        with:
-          version: 9
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'pnpm'
-      - name: Install dependencies
-        run: pnpm install
       - name: Update types
-        run: pnpm run start
+        run: npm run start
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
