--- a/.github/workflows/update-types.yml
+++ b/.github/workflows/update-types.yml
@@ -18,7 +18,9 @@ jobs:
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
-          add: dist
+          add: |
+            dist
+            package.json
           author_name: Defkil
           author_email: dev@olivergruettner.de
           message: 'Update types and package version'
