--- a/.github/workflows/update-types.yml
+++ b/.github/workflows/update-types.yml
@@ -23,4 +23,4 @@ jobs:
             package.json
           author_name: Defkil
           author_email: dev@olivergruettner.de
-          message: 'Update types and package version'
+          message: 'bot: Update types and package version'
