--- a/.github/workflows/update-types.yml
+++ b/.github/workflows/update-types.yml
@@ -1,8 +1,9 @@
 name: Update types
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: '0 0 * * 1'
+    - cron: '0 0 * * 3'
+    - cron: '0 0 * * 5'
 jobs:
   build:
     runs-on: ubuntu-22.04
