chore: Add keywords to package.json
This commit updates the package.json file, adding several keywords related to the project such as 'material-design', 'typescript', and 'material-icons'. This change provides a clearer context and increases the project's visibility on platforms like npm.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,15 @@
     "lint:fix": "standard --fix",
     "test": "jest"
   },
-  "keywords": [],
+  "keywords": [
+    "material-design",
+    "typescript",
+    "literal-types",
+    "type-safety",
+    "google-icons",
+    "material-symbols",
+    "material-icons"
+  ],
   "author": "Oliver Grüttner <dev@olivergruettner.de> (https://olis.tech)",
   "repository": "github:Defkil/material-design-icons-literal-types",
   "license": "ISC",
