ci: Add manual trigger to update-types workflow
This update introduces a manual trigger function to the update-types workflow, granting the ability to manually trigger the workflow run aside from the previously coded periodic runs.

--- a/.github/workflows/update-types.yml
+++ b/.github/workflows/update-types.yml
@@ -4,6 +4,7 @@ on:
     - cron: '0 0 * * 1'
     - cron: '0 0 * * 3'
     - cron: '0 0 * * 5'
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-22.04
