ci: Simplify path definition for GitHub Actions workflow
The paths for the 'push' event have been simplified in the '.github/workflows/publish-npm.yml' file. Instead of separate 'dist/' and 'dist/**' entries, we now use a single 'dist' entry that covers all files in the directory, simplifying the overall workflow configuration.

--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -3,8 +3,7 @@ on:
   push:
     branches: [ 'main' ]
     paths:
-      - 'dist/'
-      - 'dist/**'
+      - dist
 jobs:
   build:
     runs-on: ubuntu-latest
