--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ 'main' ]
     paths:
-      - 'dist/**'
+      - 'dist/*.ts'
 jobs:
   build:
     runs-on: ubuntu-latest
