--- a/.github/workflows/update-types.yml
+++ b/.github/workflows/update-types.yml
@@ -11,6 +11,8 @@ jobs:
     strategy:
       matrix:
         node-version: [ 20 ]
+    permissions:
+      id-token: write
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
