--- a/.github/workflows/update-types.yml
+++ b/.github/workflows/update-types.yml
@@ -13,6 +13,7 @@ jobs:
         node-version: [ 20 ]
     permissions:
       id-token: write
+      contents: write
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
